<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/green_dark">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageTrain"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/img_train"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textTitle_profile"
            android:text="@string/signup_action_sign_up"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_title"
            app:layout_constraintTop_toBottomOf="@+id/imageTrain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_field_input_text"
            android:hint="@string/signup_field_email"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/titleFragment"
            app:layout_constraintBottom_toTopOf="@id/usernameTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/field_input_text"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_field_input_text"
            android:hint="@string/signup_field_username"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/emailTextInput"
            app:layout_constraintBottom_toTopOf="@id/passwordTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/field_input_text"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_field_input_text"
            android:hint="@string/signup_field_password"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/usernameTextInput"
            app:layout_constraintBottom_toTopOf="@id/repeatPasswordTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/field_input_text"
                android:lines="1"
                android:inputType="textPassword"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_field_input_text"
            android:hint="@string/signup_field_repeat_password"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInput"
            app:layout_constraintBottom_toTopOf="@id/createAccountButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/field_input_text"
                android:lines="1"
                android:inputType="textPassword"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            style="@style/btn_eng_positive"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:text="@string/signup_action_create_account"
            android:layout_marginTop="@dimen/margin_first"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/repeatPasswordTextInput"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>